# basic_rust_crud_api

./: .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  api.http  docker-compose.dev.yaml
migrations/: 0001_users_table.sql
src/: config.rs  errors.rs  main.rs
