[package]
name = "basic_rust_crud_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "net"] }
