[package]
name = "basic_rust_crud_api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "net"] }
uuid = { version = "1.22.0", features = ["v7", "rng", "serde"] }
